--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,15 @@
   "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "prisma": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
   "type": "module",
-"scripts": {
-"start": "node --experimental-specifier-resolution=node src/index.js",
-"dev": "nodemon --experimental-specifier-resolution=node src/index.js"
-}
+  "scripts": {
+    "start": "yarn prisma migrate deploy && node --experimental-specifier-resolution=node src/index.js",
+    "dev": "nodemon --experimental-specifier-resolution=node src/index.js"
+  }
 }
