--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,12 @@
   "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^6.5.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^6.5.0"
   },
   "devDependencies": {
