--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 # Frontend Environment Variables
 REACT_APP_API_URL=http://localhost:3001
-REACT_APP_ENV=development 
+REACT_APP_ENV=development
+VITE_API_URL=http://localhost:3001 
