--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "tuterwell <a0981812683@gmail.com>",
   "license": "MIT",
   "scripts": {
-"start": "cd backend && yarn start",
-"build": "cd frontend && yarn build",
-"install:all": "cd frontend && yarn install --production=false && cd ../backend && yarn"
-}
+    "start": "cd backend && yarn start",
+    "build": "cd frontend && yarn build",
+    "install:all": "cd frontend && yarn install --production=false && cd ../backend && yarn"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.5.0"
+  }
 }
