--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
 # Frontend Environment Variables
 REACT_APP_API_URL=http://localhost:3001
 REACT_APP_ENV=development
-VITE_API_URL=http://localhost:3001 
+VITE_API_URL=http://localhost:3001
+VITE_RECAPTCHA_SITE_KEY=6LcdEQQrAAAAAOBJE2xVqj1Hw6XS0I4a84y6_hVo
+JWT_SECRET=your-secret-key
