--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prod": "vite build && vite preview"
+    "prod": "vite build && vite preview",
+    "start": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
