--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "start": "yarn prisma migrate deploy && node --experimental-specifier-resolution=node src/index.js",
     "dev": "nodemon --experimental-specifier-resolution=node src/index.js",
     "build": "prisma generate",
-    "prod": "NODE_ENV=production node --experimental-specifier-resolution=node src/index.js"
+    "prod": "NODE_ENV=production node --experimental-specifier-resolution=node src/index.js",
+    "migrate": "prisma migrate deploy",
+    "studio": "prisma studio"
   }
 }
