--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,7 +9,7 @@
         },
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://your-backend-domain.onrender.com"
         },
         {
           "key": "Access-Control-Allow-Methods",
